feat: swing handView and testHandView success and actionturn buttons (skip, place, draw) -> place not finished needs string->movement parsing